--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
             <artifactId>guava</artifactId>
             <version>25.0-jre</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/edu.princeton.cs/algs4 -->
+        <dependency>
+            <groupId>edu.princeton.cs</groupId>
+            <artifactId>algs4</artifactId>
+            <version>1.0.3</version>
+        </dependency>
 
     </dependencies>
 </project>
